--- a/papitas.css
+++ b/papitas.css
@@ -1,4 +1,3 @@
-
 *{
   margin: 0;
   padding: 0;
@@ -8,6 +7,7 @@ body{
   background-image: url(img/minecraft3.png);
   background-size: cover;
   background-attachment: fixed;
+
 
 }
 .farm{
@@ -38,14 +38,14 @@ header{
 .imagenes-header2{
   position: absolute;
   right: 450px;
-  top: 60px;
+  top: 70px;
   width: 200px;
 }
 
 .bloque .netherite{
   position: fixed; 
   width: 150px;
-  top: 700px;
+  top: 600px;
   left: 40px; 
   transition: all 0.3s;
 
@@ -166,15 +166,14 @@ header .titulo-principal{
   background-color: rgb(51, 48, 48);
   margin-bottom: 30px;
   text-align: center;
-  font-size: 30px;
-  color: aqua;
-  padding: 110px ;
-  font-family: "Saira", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
+  font-size: 50px;
+  color: rgb(236, 205, 205);
+  padding: 100px ;
+  font-family: "Bebas Neue", serif;
+  font-weight: 400;
   font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
+  text-shadow: 0 7px 30px  rgb(0, 0, 0.5);
+  margin-bottom: 150px;
 }
 .farm2{
   border: gray;
@@ -184,6 +183,7 @@ header .titulo-principal{
   margin-left: 300px;
   align-items: center;
   margin: 0 auto;
+  margin-bottom: 180px;
 }
 .farm-iron{
   flex-direction: column;
@@ -204,10 +204,12 @@ padding: 30px;
 box-shadow: 0 1px 2px   rgba(255, 255, 255, 0.295);
 padding: 40px;
 backdrop-filter: blur(3px);
-margin-bottom: 50px;
+margin-bottom: 100px;
+
 }
 .contenido-textos{
   font-size: 23px;
+  flex-wrap: wrap;
   background: #fafafa10;
   backdrop-filter: blur(10px);
   border: 2px solid gray;
@@ -226,13 +228,89 @@ margin-bottom: 50px;
   font-size: 45px;
   color: rgb(209, 36, 131);
   padding: 30px;
-  margin-top: 30px;
+  margin-top: 40px;
 }
 .imagenes2{
   width:300px;
-  align-items: left ;
+  margin-bottom: 20px;
+  margin-top: 50px;
 }
 .materiales1{
   background-attachment: fixed;
   width: 1000px;
+  margin-top: 50px;
+  box-shadow: 15px 10px 15px rgba(0, 0, 0, 0.5)
+}
+.farm3{
+  ;border: gray;
+  overflow: hidden;
+  margin-top: 30px;
+  max-width: 1250px;
+  margin-left: 300px;
+  align-items: center;
+  margin: 0 auto;
+}
+.imagenes3{
+  background-size: cover;
+  background-attachment: fixed;
+  width: 80%;
+  border-radius: 2%;
+  background-position: center;
+  max-width: 1250px;
+  padding: 30px;
+  box-shadow: 0 1px 2px   rgba(255, 255, 255, 0.295);
+  padding: 40px;
+  backdrop-filter: blur(3px);
+  margin-bottom: 100px;
+}
+.mob-farm{
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  margin: auto;
+  overflow: hidden;
+}
+.imagenes4{
+  width: 25%;
+  position: absolute;
+}
+.bat {
+  width: 17%;
+  position: absolute;
+  top: 14px;
+  right: 30px;
+}
+.materiales2{
+  width: 80%;
+  margin-top: 70px;
+}
+footer{
+  background-color: #24262B;
+  padding: 80px 0;
+}
+.footer-cont{
+  flex-wrap: wrap;
+  display: flex;
+
+
+}
+.footer{
+  text-align: center;
+  width: 25%;
+  padding: 0 15px;
+}
+.footer h4{
+  font-size: 20px;
+  color: #FFFFFF;
+  margin-bottom: 25px;
+  font-weight: 500;
+  border-bottom: 2px solid #00C3FF;
+  padding-bottom: 10px;
+  display: inline-block; /*para mantener en el ancho de la letra*/
+}
+.footer p{
+  font-size: 18px;
+  color: #BBBBBB;
+  display: block;
+  margin-bottom: 15px;
 }
