--- a/papitas.css
+++ b/papitas.css
@@ -44,19 +44,18 @@ header{
 
 .bloque .netherite{
   position: fixed; 
-  width: 150px;
-  top: 600px;
-  left: 40px; 
+  width: 130px;
+  top:130px;
   transition: all 0.3s;
-
+  left: 300px;
 
 }
 .bloque .netherite:hover{
   cursor: pointer;
   position: fixed; 
   width: 150px;
-  top: 700px;
-  left: 40px; 
+  left: 300px;
+  top:130px;
   transform: scale(1.2);
 
 }
@@ -113,14 +112,15 @@ header .titulo-principal{
 }
 .farm1{
   height: 600px;
+  margin: 0 auto;
   width:120%;
+  text-align: center;
   align-items: center;
   justify-content:space-evenly;
   flex-direction: column; 
   padding: 50px 0;
   max-width: 1000px;
   margin-top: 200px;
-  margin-left: 440px;
   overflow: hidden;
   border: 4px solid rgb(48, 54, 50);
   background-color: rgb(61, 57, 57);
@@ -235,9 +235,10 @@ margin-bottom: 100px;
   margin-bottom: 20px;
   margin-top: 50px;
 }
+
 .materiales1{
   background-attachment: fixed;
-  width: 1000px;
+  width: 600px;
   margin-top: 50px;
   box-shadow: 15px 10px 15px rgba(0, 0, 0, 0.5)
 }
