--- a/papitas.css
+++ b/papitas.css
@@ -1,3 +1,4 @@
+
 *{
   margin: 0;
   padding: 0;
@@ -7,16 +8,8 @@ body{
   background-image: url(img/minecraft3.png);
   background-size: cover;
   background-attachment: fixed;
-
-
 }
-.farm{
-  padding: 60px 0;
-  width: 90%;
-  max-width: 1250px;
-  margin: auto;
-  overflow: hidden;
-}
+
 header{
   width: 100%;
   height: 890px;
@@ -29,7 +22,7 @@ header{
 
 }
 
-.imagenes-header{ /*FIXES(sigue la imagen en cualquier seccion) ABSOLUTE(sigue la imagen en la seccion que se puso)*/
+.imagenes-header{ /*FIXED(sigue la imagen en cualquier seccion) ABSOLUTE(sigue la imagen en la seccion que se puso)*/
   position: absolute;
   right: 30px;
   bottom: 30px;
@@ -63,10 +56,8 @@ header{
 nav{
   height: 115px;
   background-color: rgba(54, 49, 49, 0.74);
-  box-sizing: border-box;
-  justify-content: space-between;
   align-items: center;
-  padding: 5px 2%;
+  padding: 5px;
   text-align: center;
   
 }
@@ -77,7 +68,7 @@ nav > a{
   font-size: 28px;
   padding: 0 20px;
   cursor: pointer;
-  display: inline-block;
+  display: inline-block/*ocupa el tamaño del contenido*/;
   text-decoration: none;
   transition: all 0.3s;
   font-family: "Mako", sans-serif;
@@ -113,11 +104,6 @@ header .titulo-principal{
 .farm1{
   height: 600px;
   margin: 0 auto;
-  width:120%;
-  text-align: center;
-  align-items: center;
-  justify-content:space-evenly;
-  flex-direction: column; 
   padding: 50px 0;
   max-width: 1000px;
   margin-top: 200px;
@@ -125,7 +111,6 @@ header .titulo-principal{
   border: 4px solid rgb(48, 54, 50);
   background-color: rgb(61, 57, 57);
   background-size: cover;
-  background-position: center;
   border-radius: 1%;
   font-family: "Changa", sans-serif;
   font-optical-sizing:auto;
@@ -156,12 +141,7 @@ header .titulo-principal{
   padding: 15px;
 }
 
-.imagenes{
-  background-size: cover;
-  background-attachment: fixed;
-  width: 90%;
-  height: 800px;
-}
+
 .titulos1{
   background-color: rgb(51, 48, 48);
   margin-bottom: 30px;
@@ -178,10 +158,7 @@ header .titulo-principal{
 .farm2{
   border: gray;
   overflow: hidden;
-  margin-top: 30px;
   max-width: 1250px;
-  margin-left: 300px;
-  align-items: center;
   margin: 0 auto;
   margin-bottom: 180px;
 }
@@ -198,9 +175,7 @@ header .titulo-principal{
   background-attachment: fixed;
   width: 80%;
 border-radius: 2%;
-background-position: center;
 max-width: 1250px;
-padding: 30px;
 box-shadow: 0 1px 2px   rgba(255, 255, 255, 0.295);
 padding: 40px;
 backdrop-filter: blur(3px);
@@ -209,7 +184,6 @@ margin-bottom: 100px;
 }
 .contenido-textos{
   font-size: 23px;
-  flex-wrap: wrap;
   background: #fafafa10;
   backdrop-filter: blur(10px);
   border: 2px solid gray;
@@ -243,13 +217,14 @@ margin-bottom: 100px;
   box-shadow: 15px 10px 15px rgba(0, 0, 0, 0.5)
 }
 .farm3{
-  ;border: gray;
+  border: gray;
   overflow: hidden;
   margin-top: 30px;
   max-width: 1250px;
   margin-left: 300px;
   align-items: center;
   margin: 0 auto;
+  margin-bottom: px;
 }
 .imagenes3{
   background-size: cover;
@@ -290,9 +265,7 @@ footer{
   padding: 80px 0;
 }
 .footer-cont{
-  flex-wrap: wrap;
   display: flex;
-
 
 }
 .footer{
@@ -312,6 +285,5 @@ footer{
 .footer p{
   font-size: 18px;
   color: #BBBBBB;
-  display: block;
   margin-bottom: 15px;
 }
